✨ feat: 随机获取一张图片 字节流
